--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,13 @@
     <string name="entry_id">entry_id</string>
     <string name="entry_title">entry_title</string>
     <string name="entry_description">entry_description</string>
+    <string name="entry_timestamp">entry_timestamp</string>
 
     <!--Strings related to Collections-->
     <string name="entries_collection">entries</string>
     <string name="action_settings">Settings</string>
+    <string name="title_hint">Enter Title</string>
+    <string name="description_hint">Enter description</string>
+    <string name="btn_save">Save</string>
 
 </resources>
