--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -14,7 +14,7 @@
         completions."
     </string>
 
-    <string name="loading">Attempting to Sign you in</string>
+
     <string name="title_activity_main">MainActivity</string>
     <string name="default_date">20/01/2018</string>
     <string name="default_title">My Birthday</string>
@@ -30,8 +30,18 @@
     <!--Strings related to Collections-->
     <string name="entries_collection">entries</string>
     <string name="action_settings">Settings</string>
+
+   <!--Strings related too JournalActivity-->
     <string name="title_hint">Enter Title</string>
     <string name="description_hint">Enter description</string>
     <string name="btn_save">Save</string>
+
+    <string name="sign_up">Creating your account</string>
+    <string name="loading">Attempting to Sign you in</string>
+    <string name="deleting_entry">Deleting your entry</string>
+    <string name="updating_entry">Updating Your Entry</string>
+    <string name="action_sign_up">Sign Up</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 
 </resources>
