--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="entries_collection">entries</string>
     <string name="action_settings">Settings</string>
 
-   <!--Strings related too JournalActivity-->
+    <!--Strings related too JournalActivity-->
     <string name="title_hint">Enter Title</string>
     <string name="description_hint">Enter description</string>
     <string name="btn_save">Save</string>
@@ -43,5 +43,8 @@
     <string name="action_sign_up">Sign Up</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="title_activity_main2">MainActivity2</string>
+
+    <string name="update_button_text">Update</string>
 
 </resources>
